# pkg/xtcp/deserializers.go
@@ -16,7 +16,7 @@ func (x *XTCP) InitDeserializers(wg *sync.WaitGroup) {
 
 	defer wg.Done()
 
-	x.RTATypeDeserializer = make(map[int]func(buf []byte, xtcpRecord *xtcp_flat_record.XtcpFlatRecord) (err error), RTATypeDeserializerMapLengthCst)
+	x.RTATypeDeserializer = make(map[int]func(buf []byte, xtcpRecord *xtcp_flat_record.Envelope_XtcpFlatRecord) (err error), RTATypeDeserializerMapLengthCst)
 	x.RTATypeDeserializerStr = make(map[int]string, RTATypeDeserializerMapLengthCst)
 
 	//x.RTATypeDeserializer[0] = None
@@ -24,7 +24,7 @@ func (x *XTCP) InitDeserializers(wg *sync.WaitGroup) {
 	// INET_DIAG_MEMINFO 1
 	key := "meminfo"
 	if _, exists := x.config.EnabledDeserializers.Enabled[key]; exists {
-		x.RTATypeDeserializer[xtcpnl.MemInfoEmumValueCst] = func(buf []byte, xtcpRecord *xtcp_flat_record.XtcpFlatRecord) (err error) {
+		x.RTATypeDeserializer[xtcpnl.MemInfoEmumValueCst] = func(buf []byte, xtcpRecord *xtcp_flat_record.Envelope_XtcpFlatRecord) (err error) {
 			return xtcpnl.DeserializeMemInfoXTCP(buf, xtcpRecord)
 		}
 		x.RTATypeDeserializerStr[xtcpnl.MemInfoEmumValueCst] = key
@@ -33,7 +33,7 @@ func (x *XTCP) InitDeserializers(wg *sync.WaitGroup) {
 	// INET_DIAG_INFO 2
 	key = "info"
 	if _, exists := x.config.EnabledDeserializers.Enabled[key]; exists {
-		x.RTATypeDeserializer[xtcpnl.TCPInfoEmumValueCst] = func(buf []byte, xtcpRecord *xtcp_flat_record.XtcpFlatRecord) (err error) {
+		x.RTATypeDeserializer[xtcpnl.TCPInfoEmumValueCst] = func(buf []byte, xtcpRecord *xtcp_flat_record.Envelope_XtcpFlatRecord) (err error) {
 			return xtcpnl.DeserializeTCPInfoXTCP(buf, xtcpRecord)
 		}
 		x.RTATypeDeserializerStr[xtcpnl.TCPInfoEmumValueCst] = key
@@ -42,7 +42,7 @@ func (x *XTCP) InitDeserializers(wg *sync.WaitGroup) {
 	// INET_DIAG_VEGASINFO 3
 	key = "vegas"
 	if _, exists := x.config.EnabledDeserializers.Enabled[key]; exists {
-		x.RTATypeDeserializer[xtcpnl.VegasInfoEnumValueCst] = func(buf []byte, xtcpRecord *xtcp_flat_record.XtcpFlatRecord) (err error) {
+		x.RTATypeDeserializer[xtcpnl.VegasInfoEnumValueCst] = func(buf []byte, xtcpRecord *xtcp_flat_record.Envelope_XtcpFlatRecord) (err error) {
 			return xtcpnl.DeserializeVegasInfoXTCP(buf, xtcpRecord)
 		}
 		x.RTATypeDeserializerStr[xtcpnl.VegasInfoEnumValueCst] = key
@@ -51,7 +51,7 @@ func (x *XTCP) InitDeserializers(wg *sync.WaitGroup) {
 	// INET_DIAG_CONG 4
 	key = "cong"
 	if _, exists := x.config.EnabledDeserializers.Enabled[key]; exists {
-		x.RTATypeDeserializer[xtcpnl.CongInfoEmumValueCst] = func(buf []byte, xtcpRecord *xtcp_flat_record.XtcpFlatRecord) (err error) {
+		x.RTATypeDeserializer[xtcpnl.CongInfoEmumValueCst] = func(buf []byte, xtcpRecord *xtcp_flat_record.Envelope_XtcpFlatRecord) (err error) {
 			return xtcpnl.DeserializeCongInfoXTCP(buf, xtcpRecord)
 		}
 		x.RTATypeDeserializerStr[xtcpnl.CongInfoEmumValueCst] = key
@@ -60,7 +60,7 @@ func (x *XTCP) InitDeserializers(wg *sync.WaitGroup) {
 	// INET_DIAG_TOS 5
 	key = "tos"
 	if _, exists := x.config.EnabledDeserializers.Enabled[key]; exists {
-		x.RTATypeDeserializer[xtcpnl.TypeOfServiceEmumValueCst] = func(buf []byte, xtcpRecord *xtcp_flat_record.XtcpFlatRecord) (err error) {
+		x.RTATypeDeserializer[xtcpnl.TypeOfServiceEmumValueCst] = func(buf []byte, xtcpRecord *xtcp_flat_record.Envelope_XtcpFlatRecord) (err error) {
 			return xtcpnl.DeserializeTypeOfServiceXTCP(buf, xtcpRecord)
 		}
 		x.RTATypeDeserializerStr[xtcpnl.TypeOfServiceEmumValueCst] = key
@@ -69,7 +69,7 @@ func (x *XTCP) InitDeserializers(wg *sync.WaitGroup) {
 	// INET_DIAG_TCLASS 6
 	key = "tc"
 	if _, exists := x.config.EnabledDeserializers.Enabled[key]; exists {
-		x.RTATypeDeserializer[xtcpnl.TrafficClassEmumValueCst] = func(buf []byte, xtcpRecord *xtcp_flat_record.XtcpFlatRecord) (err error) {
+		x.RTATypeDeserializer[xtcpnl.TrafficClassEmumValueCst] = func(buf []byte, xtcpRecord *xtcp_flat_record.Envelope_XtcpFlatRecord) (err error) {
 			return xtcpnl.DeserializeTrafficClassXTCP(buf, xtcpRecord)
 		}
 		x.RTATypeDeserializerStr[xtcpnl.TrafficClassEmumValueCst] = key
@@ -78,7 +78,7 @@ func (x *XTCP) InitDeserializers(wg *sync.WaitGroup) {
 	// INET_DIAG_SKMEMINFO 7
 	key = "skmem"
 	if _, exists := x.config.EnabledDeserializers.Enabled[key]; exists {
-		x.RTATypeDeserializer[xtcpnl.SkMemInfoEnumValueCst] = func(buf []byte, xtcpRecord *xtcp_flat_record.XtcpFlatRecord) (err error) {
+		x.RTATypeDeserializer[xtcpnl.SkMemInfoEnumValueCst] = func(buf []byte, xtcpRecord *xtcp_flat_record.Envelope_XtcpFlatRecord) (err error) {
 			return xtcpnl.DeserializeSkMemInfoXTCP(buf, xtcpRecord)
 		}
 		x.RTATypeDeserializerStr[xtcpnl.SkMemInfoEnumValueCst] = key
@@ -87,7 +87,7 @@ func (x *XTCP) InitDeserializers(wg *sync.WaitGroup) {
 	// INET_DIAG_SHUTDOWN 8
 	key = "shut"
 	if _, exists := x.config.EnabledDeserializers.Enabled[key]; exists {
-		x.RTATypeDeserializer[xtcpnl.ShutdownEmumValueCst] = func(buf []byte, xtcpRecord *xtcp_flat_record.XtcpFlatRecord) (err error) {
+		x.RTATypeDeserializer[xtcpnl.ShutdownEmumValueCst] = func(buf []byte, xtcpRecord *xtcp_flat_record.Envelope_XtcpFlatRecord) (err error) {
 			return xtcpnl.DeserializeShutdownXTCP(buf, xtcpRecord)
 		}
 		x.RTATypeDeserializerStr[xtcpnl.ShutdownEmumValueCst] = key
@@ -96,7 +96,7 @@ func (x *XTCP) InitDeserializers(wg *sync.WaitGroup) {
 	// INET_DIAG_DCTCPINFO 9
 	key = "dctcp"
 	if _, exists := x.config.EnabledDeserializers.Enabled[key]; exists {
-		x.RTATypeDeserializer[xtcpnl.DCTCPInfoEnumValueCst] = func(buf []byte, xtcpRecord *xtcp_flat_record.XtcpFlatRecord) (err error) {
+		x.RTATypeDeserializer[xtcpnl.DCTCPInfoEnumValueCst] = func(buf []byte, xtcpRecord *xtcp_flat_record.Envelope_XtcpFlatRecord) (err error) {
 			return xtcpnl.DeserializeDCTCPInfoXTCP(buf, xtcpRecord)
 		}
 		x.RTATypeDeserializerStr[xtcpnl.DCTCPInfoEnumValueCst] = key
@@ -112,7 +112,7 @@ func (x *XTCP) InitDeserializers(wg *sync.WaitGroup) {
 	// INET_DIAG_BBRINFO 16
 	key = "bbr"
 	if _, exists := x.config.EnabledDeserializers.Enabled[key]; exists {
-		x.RTATypeDeserializer[xtcpnl.BBRInfoEnumValueCst] = func(buf []byte, xtcpRecord *xtcp_flat_record.XtcpFlatRecord) (err error) {
+		x.RTATypeDeserializer[xtcpnl.BBRInfoEnumValueCst] = func(buf []byte, xtcpRecord *xtcp_flat_record.Envelope_XtcpFlatRecord) (err error) {
 			return xtcpnl.DeserializeBBRInfoXTCP(buf, xtcpRecord)
 		}
 		x.RTATypeDeserializerStr[xtcpnl.BBRInfoEnumValueCst] = key
@@ -121,7 +121,7 @@ func (x *XTCP) InitDeserializers(wg *sync.WaitGroup) {
 	// INET_DIAG_CLASS_ID 17
 	key = "classid"
 	if _, exists := x.config.EnabledDeserializers.Enabled[key]; exists {
-		x.RTATypeDeserializer[xtcpnl.ClassIDEnumValueCst] = func(buf []byte, xtcpRecord *xtcp_flat_record.XtcpFlatRecord) (err error) {
+		x.RTATypeDeserializer[xtcpnl.ClassIDEnumValueCst] = func(buf []byte, xtcpRecord *xtcp_flat_record.Envelope_XtcpFlatRecord) (err error) {
 			return xtcpnl.DeserializeClassIDXTCP(buf, xtcpRecord)
 		}
 		x.RTATypeDeserializerStr[xtcpnl.ClassIDEnumValueCst] = key
@@ -134,7 +134,7 @@ func (x *XTCP) InitDeserializers(wg *sync.WaitGroup) {
 	// INET_DIAG_CGROUP_ID 21
 	key = "cgroup"
 	if _, exists := x.config.EnabledDeserializers.Enabled[key]; exists {
-		x.RTATypeDeserializer[xtcpnl.CGroupIDEnumValueCst] = func(buf []byte, xtcpRecord *xtcp_flat_record.XtcpFlatRecord) (err error) {
+		x.RTATypeDeserializer[xtcpnl.CGroupIDEnumValueCst] = func(buf []byte, xtcpRecord *xtcp_flat_record.Envelope_XtcpFlatRecord) (err error) {
 			return xtcpnl.DeserializeCGroupIDXTCP(buf, xtcpRecord)
 		}
 		x.RTATypeDeserializerStr[xtcpnl.CGroupIDEnumValueCst] = key
@@ -143,14 +143,14 @@ func (x *XTCP) InitDeserializers(wg *sync.WaitGroup) {
 	// INET_DIAG_SOCKOPT 22
 	key = "sockopt"
 	if _, exists := x.config.EnabledDeserializers.Enabled[key]; exists {
-		x.RTATypeDeserializer[xtcpnl.SockOptEnumValueCst] = func(buf []byte, xtcpRecord *xtcp_flat_record.XtcpFlatRecord) (err error) {
+		x.RTATypeDeserializer[xtcpnl.SockOptEnumValueCst] = func(buf []byte, xtcpRecord *xtcp_flat_record.Envelope_XtcpFlatRecord) (err error) {
 			return xtcpnl.DeserializeCGroupIDXTCP(buf, xtcpRecord)
 		}
 		x.RTATypeDeserializerStr[xtcpnl.SockOptEnumValueCst] = key
 	}
 
 	// // INET_DIAG_PRAGUEINFO 23
-	// x.RTATypeDeserializer[xtcpnl.SockOptEnumValueCst] = func(buf []byte, xtcpRecord *xtcp_flat_record.XtcpFlatRecord) (err error) {
+	// x.RTATypeDeserializer[xtcpnl.SockOptEnumValueCst] = func(buf []byte, xtcpRecord *xtcp_flat_record.Envelope_XtcpFlatRecord) (err error) {
 	// 	return xtcpnl.DeserializeCGroupIDXTCP(buf, xtcpRecord)
 	// }
 
